--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-    "name": "RealTimeMap",
-    "version": "0.0.1",
-    "description": "Real time map",
-    "dependencies": {
-        "express": "latest",
-        "dust": "latest",
-        "socket.io": "latest",
-        "backbone": "latest",
-        "backbone.io": "latest",
-        "requirejs": "latest"
-    },
-    "author": "Luiz Armesto"
+  "name": "RealTimeMap",
+  "version": "0.0.1",
+  "description": "Real time map",
+  "author": "Luiz Armesto",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "express": "~3.3.3",
+    "dustjs-linkedin": "~1.2.5",
+    "consolidate": "~0.9.1",
+    "mongoose": "~3.6.14",
+    "socket.io": "~0.9.16",
+    "underscore": "~1.5.0",
+    "backbone.io": "~0.3.3",
+    "requirejs": "~2.1.6"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-requirejs": "~0.4.1"
+  }
 }
